--- a/css/experience.css
+++ b/css/experience.css
@@ -1,6 +1,22 @@
 .expInfo{
     display: block;
     height: 200px;
+
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+    transition: all .3s ease;
+
+    cursor: pointer;
+}
+
+.expInfo:hover{
+    -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0%);
+    background-color: #ddd;
+
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .expTitleContainer{
