--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 
 *{
     font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
 }
 
 ul,li{
@@ -45,6 +46,7 @@ h2{
 
 #underscore{
     color: #4286f4;
+    font-size:30px;
 }
 
 
