--- a/css/mainlinks.css
+++ b/css/mainlinks.css
@@ -12,6 +12,12 @@
   position: relative;
   z-index:1;
   padding:2px 6px;
+
+  -webkit-user-select: none; /* Chrome/Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+  -o-user-select: none;
+  user-select: none;
 }
 
 .mainLink:after {
