--- a/css/footer.css
+++ b/css/footer.css
@@ -9,3 +9,28 @@
 .footer span{
     color: #aaa;
 }
+
+.footerLinkContainer{
+    margin-bottom: 5px;
+    text-align: center;
+    vertical-align: middle;
+    height: 25px;
+    line-height: 25px;
+}
+
+.footerLink{
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    text-decoration: none;
+    color: gray;
+    border-radius: 100%;
+
+    transition: all .2s ease;
+}
+
+.footerLink:hover{
+    background-color: #4286f4;
+    color: #fff;
+    transform: scale(1.4);
+}
