--- a/css/experience.css
+++ b/css/experience.css
@@ -8,13 +8,13 @@
     cursor: pointer;
     border-radius: 10px;
 
-    transition: all .3s ease;
+    transition: all .1s ease;
 }
 
 .expInfo:hover{
-    -moz-transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+    -moz-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .expTitleContainer{
@@ -44,6 +44,21 @@
 .expLogo{
     margin-top: 40px;
     width: 70px;
+}
+
+@media only screen and (max-width: 800px){
+    .expInfo {
+        height: unset;
+        padding: 0 16px;
+    }
+
+    .expTitleContainer{
+        width: unset;
+    }
+
+    .expDescContainer{
+        margin-left: 40%;
+    }
 }
 
 
